# groceries-rs

./: .gitignore  Cargo.toml  README.md
src/: err.rs  groceries.rs  ingredient.rs  main.rs  recipe.rs  recipes.rs  scrapers.rs  shoppingitem.rs  shoppinglist.rs  site_scraper.rs  traits.rs  util.rs  walmart_scraper.rs
src/groceries/: grocery_item.rs  grocery_list.rs
src/recipe/: recipe_scraper.rs
src/recipes/: ingredient.rs  recipe.rs
src/scrapers/: grocery_list_scraper.rs  recipe_scraper.rs  site_scraper.rs  walmart_scraper.rs
src/util/: number_parser.rs
